# BEAASPlus

./: README.md
BEAASPlusProtocol/: accessRequest.py  api.py  apiAllFunc.py  base.py  multipleAccessRequest.py  tt.py  updateABAC.py
demoFlaskApp/: ABACblockchain.py  ABACdb.py  application.py  requirements.txt
demoFlaskApp/static/css/: main.css
demoFlaskApp/templates/: base.html  createObjectAttributePosValues.html  createObjectAttributeValuePair.html  createObjectAttributes.html  createObjects.html  createOperations.html  createRuleAttributeValuePair.html  createRules.html  createUserAttributePosValues.html  createUserAttributeValuePair.html  createUserAttributes.html  createUsers.html  done.html  error.html  home.html  showTxDetails.html  showUniqueTx.html  verifyObjectAttributePosValues.html  verifyObjectAttributeValuePair.html  verifyObjectAttributes.html  verifyObjects.html  verifyOperations.html  verifyRuleObject.html  verifyRuleOperation.html  verifyRuleUser.html  verifyRules.html  verifyUserAttributePosValues.html  verifyUserAttributeValuePair.html  verifyUserAttributes.html  verifyUsers.html
protocolDeploy/: README.md  setup.cfg  setup.py
smartContracts/: abacOpt1.sol  abacOpt2.sol  abacOpt3.sol  abacOpt4.sol  abacOpt5.sol
