[metadata]
name = BEAASPlus
version = 1.0.0
author = Ritik Kumar
author_email = kumarritik@iitkgp.ac.in 
description = BEAASPlus Protocol
long_description = file: README.md
long_description_content_type = text/markdown
# url = 

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5